hphp/test/slow/reified-generics/error-handler-3.php.expectf
ERROR: string(71) "Argument 1 passed to f() must be an instance of C<int>, C<string> given"

Catchable fatal error: Argument 1 passed to f() must be an instance of C<int>, C<string> given in %s on line 20
